# ai-playground

./: .editorconfig  .env.secret.sample  .eslintrc.js  .gitignore  README.md  _readings_.md  eslint.config.js  evaluation_harness.py  evaluation_results.json  human_eval_problems.json  jest.config.js  package-lock.json  package.json  pyproject.toml  setup.sh  tsconfig.json
@types/: agents.d.ts  constants.d.ts  instrumentation.d.ts  pathspec.d.ts
code-monkey-py/src/: constants.py  main_code_analyst.py  main_coder.py
code-monkey-py/src/agents/: agents.py  service.py
code-monkey-py/src/audio/: audio_input.py  audio_playground.py  audio_recording.py  audio_transcriber.py
code-monkey-py/src/instrumentation/: __init__.py
code-monkey-py/src/models/: __init__.py
code-monkey-py/src/tools/: ask_user_tool.py  create_file_tool.py  exec_tool.py  io_tool.py
code-monkey-py/src/util/: time_util.py
code-monkey-ts/: .eslintrc.js  .gitignore  Anthropic.ts  Model.ts  code-monkey.ts  code_context.js  code_context.ts  constants.ts  dataset_evaluator.ts  eslint.config.cjs  eslint.config.js  eslint_report.json  eslint_report_after_fixes.json  eslint_report_after_globals_update.json  eslint_report_after_resolver_update.json  evaluation_harness.js  getSrcDir.js  getSrcDir.ts  index.ts  instrumentation.js  instrumentation.ts  jest.config.js  main.js  main.ts  main_code_analyst.js  main_code_analyst.ts  main_coder.js  main_coder.ts  main_manager.js  main_manager.ts  package-lock.json  package.json  test.ts  token_stats.ts  tsconfig.json
code-monkey-ts/agents/: agent.ts  agents.ts  base_agent.ts  index.ts  runAgentPrompt.ts  service.ts
code-monkey-ts/audio/: audio_transcriber.ts
code-monkey-ts/audio/test/: test_audio_transcriber.ts
code-monkey-ts/config/: agents.yml  env.ts  index.ts  types.ts
code-monkey-ts/instrumentation/: instrument.ts
code-monkey-ts/models/: index.ts  msn.ts  registry.ts
code-monkey-ts/src/: code_context.js  code_context.ts  constants.ts  index.js  instrumentation.ts  main.js  main.ts  main_code_analyst.js  main_code_analyst.ts  main_coder.js  main_coder.ts  main_manager.js  main_manager.ts  test.js  test.ts  token_stats.js
code-monkey-ts/src/agents/: agent.js  agent.ts  agents.js  agents.ts  base_agent.js  base_agent.ts  index.js
code-monkey-ts/src/audio/: __init__.js  __init__.ts  audio_input.js  audio_input.ts  audio_playground.js  audio_playground.ts  audio_recording.js  audio_recording.ts  audio_transcriber.js  audio_transcriber.ts  test_audio_transcriber.js  test_audio_transcriber.ts
code-monkey-ts/src/embeddings/: chunker.js  chunker.ts  embeddings.js  (+1 more)
code-monkey-ts/tests/: test_ast_parser.ts  test_rg_tool.ts
code-monkey-ts/tools/: WriteFileTool.js  WriteFileTool.ts  ask_user_tool.ts  createFileTool.js  createFileTool.ts  create_file_tool.ts  delete_file_tool.ts  exec_tool.ts  getDependenciesTool.ts  get_dependencies_tool.ts  index.ts  invokeAgentTool.js  invokeAgentTool.ts  invoke_agent_tool.ts  io_tool.ts  package-lock.json  package.json  read_file_tool.js  read_file_tool.ts  renameFileTool.js  renameFileTool.ts  rename_file_tool.ts  replace_in_file_tool.js  replace_in_file_tool.ts  rg_tool.js  rg_tool.ts  run_test_tool.js  run_test_tool.ts  service.js  service.ts  testGetDependenciesTool.ts  test_input.json  utils.ts  write_file_tool.ts
code-monkey-ts/util/: logs.ts  time_util.ts
code-monkey-ts/utils/: agent_utils.ts  error_handling.ts  logUtil.ts  logger.ts  message_types.ts  sqlite_saver.ts
code-monkey-ts2/: code-monkey.ts  code_context.ts  constants.ts  instrumentation.ts  main.ts
code-monkey-ts2/agents/: agent.ts  agents.ts  base_agent.ts  index.ts  service.ts
code-monkey-ts2/config/: agents.yml  env.ts  index.ts  types.ts  yaml.ts
code-monkey-ts2/models/: index.ts  msn.ts  registry.ts
code-monkey-ts2/tools/: create_file_tool.ts  delete_file_tool.ts  index.ts  invoke_agent_tool.ts  io_tool.ts  read_file_tool.ts  rename_file_tool.ts  replace_in_file_tool.ts  utils.ts  write_file_tool.ts
code-monkey-ts2/utils/: logUtil.ts
code-monkey/src/: agent.py  agents.py  code_context.py  constants.py  deps.py  main.py  main_code_analyst.py  main_coder.py  main_manager.py  main_planner.py  models.py  test.py  test_deps.py  test_rg_tool.py  token_stats.py  tool_user.py
experiment1/: main.py
src/: diff-experiment1.sh  setup.sh
src/audio/: audio_playground.py  audio_recording.py
src/util/: time_util.py
(+171 files in other folders)
